--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,12 @@
-DB_PORT=
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+APP_PORT = your server port
+DB_HOST= local or whatever
+CLIENT_URL= your client URL
+TOKEN_SECRET= secret code jwt access
+DB_URI= connexion to atlas
+COOKIE_PARSER_SECRET= cookie parser secret code
+
+For secret code generation  you can type the following in terminal:
+node "enter"
+require('crypto').randomBytes(64).toString('hex') "enter"
+
+then paste the generated code (without the '')
