--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,16 @@
 APP_PORT = your server port
+
 DB_HOST= local or whatever
+
 CLIENT_URL= your client URL
+
 TOKEN_SECRET= secret code jwt access
-DB_URI= connexion to atlas
+
+DB_URI= connexion to atlas, go on Atlas click on "Connect" and choose your connection method.
+
 COOKIE_PARSER_SECRET= cookie parser secret code
 
 For secret code generation  you can type the following in terminal:
 node "enter"
 require('crypto').randomBytes(64).toString('hex') "enter"
-
 then paste the generated code (without the '')
